# fbtoggl

./: .gitignore  Cargo.toml  Justfile  LICENSE  README.md  check.sh  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: ci.yaml  release.yml
src/: arbzg.rs  cli.rs  client.rs  client_tests.rs  common.rs  config.rs  duration_math.rs  error.rs  http_client.rs  lib.rs  main.rs  model.rs  output.rs  report_client.rs  types.rs
src/commands/: clients.rs  common.rs  config.rs  mod.rs  projects.rs  reports.rs  time_entries.rs  time_entries_tests.rs  workspaces.rs
