[package]
name = "fbtoggl"
version = "2024.8.2"
edition = "2021"
authors = ["Stefan Ruzitschka <stefan@icepuma.dev>"]
description = "Terminal client to interact with track.toggl.com REST api."
keywords = ["toggl", "track", "time-tracking", "cli", "productivity"]
repository = "https://github.com/icepuma/fbtoggl"
readme = "README.md"
license-file = "LICENSE"

[dependencies]
base64 = "0.22"
minreq = { version = "2", features = [
    "https-rustls-probe",
    "json-using-serde",
    "urlencoding",
] }
clap = { version = "4", features = [
    "deprecated",
    "derive",
    "suggestions",
    "color",
    "env",
    "unicode",
    "wrap_help",
] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde", "clock"] }
chronoutil = "0.2"
now = "0.1"
xdg = "2"
config = "0.15"
toml = "0.8"
dialoguer = "0.11"
urlencoding = "2"
jackdauer = "0.1"
term-table = "1"
colored = "3"
hhmmss = "0.1"
itertools = "0.14"
htp = "0.4"
humantime = "2"
url = "2"

[dev-dependencies]
env_logger = "0.11"
ctor = "0.2"
pretty_assertions = "1"
mockito = "1"

[profile.release]
lto = true
strip = true
opt-level = "z"
codegen-units = 1
