[package]
name = "fbtoggl"
version = "2025.5.28"
edition = "2024"
authors = ["Stefan Ruzitschka <stefan@icepuma.dev>"]
description = "Terminal client to interact with track.toggl.com REST api."
keywords = ["toggl", "track", "time-tracking", "cli", "productivity"]
repository = "https://github.com/icepuma/fbtoggl"
readme = "README.md"
license-file = "LICENSE"

[lints.clippy]
# Enable all pedantic lints
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

# Additional restriction lints
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
missing_errors_doc = "warn"
missing_panics_doc = "warn"
allow_attributes_without_reason = "warn"
arithmetic_side_effects = "warn"
as_conversions = "warn"
integer_division = "warn"
modulo_arithmetic = "warn"
std_instead_of_alloc = "warn"
std_instead_of_core = "warn"
str_to_string = "warn"
string_to_string = "warn"

# Correctness
correctness = { level = "deny", priority = -1 }

# Suspicious
suspicious = { level = "warn", priority = -1 }

# Style
style = { level = "warn", priority = -1 }

# Complexity
complexity = { level = "warn", priority = -1 }

# Perf
perf = { level = "warn", priority = -1 }

# Specific lints to deny
indexing_slicing = "deny"
unwrap_in_result = "deny"

# Allow some lints that are too restrictive for a CLI app
missing_docs_in_private_items = "allow"
multiple_crate_versions = "allow"  # Dependencies may pull in different versions
cargo_common_metadata = "allow"  # We have the important metadata already

[dependencies]
base64 = "0.22"
minreq = { version = "2", features = [
    "https-rustls-probe",
    "json-using-serde",
    "urlencoding",
] }
clap = { version = "4", features = [
    "deprecated",
    "derive",
    "suggestions",
    "color",
    "env",
    "unicode",
    "wrap_help",
] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde", "clock"] }
chronoutil = "0.2"
now = "0.1"
xdg = "3"
config = "0.15"
toml = "0.8"
dialoguer = "0.11"
urlencoding = "2"
jackdauer = "0.1"
term-table = "1"
colored = "3"
hhmmss = "0.1"
itertools = "0.14"
htp = "0.4"
humantime = "2"
url = "2"

[dev-dependencies]
env_logger = "0.11"
ctor = "0.4"
pretty_assertions = "1"
mockito = "1"

[profile.release]
lto = true
strip = true
opt-level = "z"
codegen-units = 1
